<resources>
    <string name="app_name">Mishloha Test</string>
    <string name="load_repositories">Load Repositories by:</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="spinner_day">Day</string>
    <string name="favorite">Favorite</string>
    <string name="error">Error!</string>
    <string name="retry">Retry</string>
    <string name="created_on">Created:</string>
    <string name="last_update">Last updated:</string>
    <string name="open_issues">Open issues:</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="could_not_open_the_browser">Could not open the browser</string>
</resources>